2015-03-20  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-70

	* pyatmlab/collocations.py:

	(CollocatedDataset.read_aggregated_pairs):

	- When a granule contains time both inside and outside the requested
	time interval, select only those collocations within the time (in case
	of primary) or within the time +/- the interval (in case of secondary)
	and report on this.

	(ProfileCollocationDescriber):

	- Fix bug in dataname_compare_profiles leading to the targ being eaten
	up.

	(ProfileCollocationDescriber.visualise_profile_comparison):

	- Fix bug, move data writing to correct level of indentation

2015-03-16  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-69

	* pyatmlab/collocations.py(collapse):

	- Added function to collapse secondary upon primary

2015-03-06  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-68

	* pyatmlab/collocations.py(ProfileCollocationDescriber):

	(.partial_columns):

	- Bugfix, make sure callee has parcols

	(._get_xa_ak):

	- Bugfix, avoid sending datetime64 to joblib.Memory

	(_get_smoothing_error):

	- Don't pass unsmoothed data on to get_additional_field,
	use smoothed data to choose error estimates to obtain.

2015-03-03  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-67

	* pyatmlab/collocations.py(collocations.py):

	(CollocatedDataset.__repr__): Add method

	(CollocationDescriber):

	- Use joblib.Memory for several methods
	- Move fignames to ProfileCollocationDescriber as they're only
	relevant there

	  (regrid_profiles, compare_profiles_raw):

	  - Rather than altering state, return z, so this can be cached

	  (smooth):

	  - Return hash rather than tuple

	  (partial_columns, compare_profiles_smooth):

	  - Adapt for changed signature in smooth

	* pyatmlab/dataset.py:
	
	(Dataset):

	- Implement memoisation for several methods

	(MultiFileDataset):

	- Part of this, implement __getstate__ and __setstate__ so we can skip