@@ -1,3 +1,11 @@
+2015-03-23  Gerrit Holl  <gerrit.holl@utoronto.ca>:
+
+	* pyatmlab-0-0-71
+
+	* pyatmlab/collocations.py(ProfileCollocationDescriber.visualise_pc_comparison):
+
+	- Also write error estimates
+
 2015-03-20  Gerrit Holl  <gerrit.holl@utoronto.ca>:
 
 	* pyatmlab-0-0-70
